--- a/idnex.html
+++ b/idnex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Horoscope</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css"/>
 </head>
@@ -33,7 +33,10 @@ What day were you born?
 <select id="day">
 
 </select>
+
 <button id="startButton" onclick="onSubmit()">Click to start</button>
 <div id="sign"></div>
+<div id="image"></div>
+<div id="birthday"></div>
 </body>
 </html>
